# kazu

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  kazu.sln  kazu.vcxproj  kazu.vcxproj.filters
cmake/Modules/: FindFFMPEG.cmake
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  browseLibraryWindow.ui  kazu.cpp  kazu.h  kazu.vcxproj  kazu.vcxproj.filters  libraryWindow.ui  mainWindow.ui  moc_MainWindow.cpp  ui_browseLibraryWindow.h  ui_libraryWindow.h  ui_mainWindow.h  ui_sources.h
